[package]
name = "flu"
description = "Lua 5.1 framework for Rust"
repository = "https://github.com/fkaa/flu"
readme = "README.md"
version = "0.0.2"
authors = ["Felix Kaaman <trundmatu@gmail.com>"]
keywords = ["lua", "framework", "bindings"]
license = "MIT OR Apache-2.0"
build = "build.rs"

[build-dependencies]
pkg-config = "0.3"
gcc = "0.3"

[dependencies]
libc = "0.2"
